feat(Config): Finalize configuration options
fixes #46